restyled footnotes class to apply to li instead of div, titled with .footnotes:before. Can be used in .md with {:.footnotes} on an ol

--- a/about.html
+++ b/about.html
@@ -4,8 +4,25 @@ title: About
 permalink: /about/
 ---
 
-<h1>About</h1>
+<div class="content about">
+	<h1 class="content-title">About</h1>
 
-<p>Here's a bit about me!</p>
+	<p>My name is Philip Walton. I’m an engineer at Google on the developer relations team and formerly, senior front-end software engineer at Appfolio. I’ve been working on the web professionally since 2006, and unprofessionally since 1998 when I made my first website.</p>
 
-<p>...</p>
+	<p>This blog is a place where I can explore the ideas I think about outside of work. I tend to prefer writing about larger, more abstract topics, but occasionally I’ll bring up a specific technology as well.</p>
+
+	<p>If you’re interested in my thoughts on something, let me know, and maybe it’ll turn into my next article.</p>
+
+	<h2>Contact</h2>
+		<ul>
+			<li>E-mail</li>
+			<li>Twitter</li>
+		</ul>
+
+	<h2>Projects</h2>
+		<ul>
+			<li>Solved by Flexbox</li>
+			<li>Flexbugs</li>
+			<li>HTML Inspector</li>
+		</ul>
+</div>
