--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: hero2
 title: About
 permalink: /about/
 ---
@@ -14,15 +14,9 @@ permalink: /about/
 	<p>If you’re interested in my thoughts on something, let me know, and maybe it’ll turn into my next article.</p>
 
 	<h2>Contact</h2>
-		<ul>
-			<li>E-mail</li>
-			<li>Twitter</li>
-		</ul>
+	<ul>
+		<li>E-mail</li>
+		<li>Twitter</li>
+	</ul>
 
-	<h2>Projects</h2>
-		<ul>
-			<li>Solved by Flexbox</li>
-			<li>Flexbugs</li>
-			<li>HTML Inspector</li>
-		</ul>
 </div>
