content updated, smaller filesize for hero

--- a/about.html
+++ b/about.html
@@ -7,11 +7,7 @@ permalink: /about/
 <div class="content about">
 	<h1 class="content-title">About</h1>
 
-	<p>My name is Philip Walton. I’m an engineer at Google on the developer relations team and formerly, senior front-end software engineer at Appfolio. I’ve been working on the web professionally since 2006, and unprofessionally since 1998 when I made my first website.</p>
-
-	<p>This blog is a place where I can explore the ideas I think about outside of work. I tend to prefer writing about larger, more abstract topics, but occasionally I’ll bring up a specific technology as well.</p>
-
-	<p>If you’re interested in my thoughts on something, let me know, and maybe it’ll turn into my next article.</p>
+	<p>My name is Ben Nourse </p>
 
 	<h2>Contact</h2>
 	<ul>
