--- a/about.html
+++ b/about.html
@@ -7,12 +7,16 @@ permalink: /about/
 <div class="content about">
 	<h1 class="content-title">About</h1>
 
-	<p>My name is Ben Nourse </p>
+  <hr>
+
+	<p>My name is Ben Nourse.</p>
 
 	<h2>Contact</h2>
 	<ul>
-		<li>E-mail</li>
-		<li>Twitter</li>
+		<li><a href="mailto:bnourse@gmail.com" target="_top">E-Mail</a></li>
+		<li><a href="https://twitter.com/benourse">Twitter</a></li>
+    <li><a href="https://www.linkedin.com/in/ben-nourse-74080a13b/">LinkedIn</a></li>
+    <li><a href="https://www.github.com/bnourse">GitHub</a></li>
 	</ul>
 
 </div>
