icons linked, email, twitter, github, linkedin, rss urls all added to _config.yml

--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@ permalink: /about/
 
 	<h2>Contact</h2>
 	<ul>
-		<li><a href="mailto:bnourse@gmail.com" target="_top">E-Mail</a></li>
-		<li><a href="https://twitter.com/benourse">Twitter</a></li>
-    <li><a href="https://www.linkedin.com/in/ben-nourse-74080a13b/">LinkedIn</a></li>
-    <li><a href="https://www.github.com/bnourse">GitHub</a></li>
+		<li><a href="mailto:{{ site.email }}">E-Mail</a></li>
+		<li><a href="{{ site.twitter }}">Twitter</a></li>
+    <li><a href="{{ site.linkedin }}">LinkedIn</a></li>
+    <li><a href="{{ site.github }}">GitHub</a></li>
 	</ul>
 
 </div>
