--- a/about.html
+++ b/about.html
@@ -9,7 +9,27 @@ permalink: /about/
 
   <hr>
 
-	<p>My name is Ben Nourse.</p>
+	<p>As a full-stack web
+developer with IT
+experience, I enjoy nding
+solutions to problems big
+and small.</p>
+
+<p>I am an enthusiastic learner.
+Sometimes that means
+indulging my desire to
+acquire new knowledge and
+technical skills, other times
+it’s pushing myself to
+improve soft-skills.</p>
+
+<p>I love how software
+development is always
+evolving, and I want to work
+with people who embrace
+that change and encourage
+each other to develop their
+craft.</p>
 
 	<h2>Contact</h2>
 	<ul>
