fixed typo in about

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ permalink: /about/
 
 	<p>As a full-stack web
 developer with IT
-experience, I enjoy nding
+experience, I enjoy finding
 solutions to problems big
 and small.</p>
 
